compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_with_public_function_with_correct_arity_even_if_arguments_type_mismatch.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Public function with correct arity from another module should be suggested.\n\nimport module\npub fn main() {\n    add(1, 1)\n}"
---
----- SOURCE CODE
-- module.gleam

pub fn add(x: Float, y: Float) {
    x +. y
}

-- main.gleam

// Public function with correct arity from another module should be suggested.

import module
pub fn main() {
    add(1, 1)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:5
  │
6 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
Did you mean:

  - module.add
