compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_with_public_value_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Public value from another module should be suggested.\n\nimport module\npub fn main() {\n    add(1, 1)\n}"
---
----- SOURCE CODE
-- module.gleam

pub const add = private_add
fn private_add(x: Int, y: Int) {
    x + y
}

-- main.gleam

// Public value from another module should be suggested.

import module
pub fn main() {
    add(1, 1)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:5
  │
6 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
Did you mean:

  - module.add
