compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__use_of_private_type_in_the_same_package.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport wibble\n\npub fn go() -> wibble.Wibble {\n  todo\n}\n"
---
----- SOURCE CODE
-- wibble.gleam

type Wibble {
  Wibble
}


-- main.gleam

import wibble

pub fn go() -> wibble.Wibble {
  todo
}


----- ERROR
error: Use of private type
  ┌─ /src/one/two.gleam:4:16
  │
4 │ pub fn go() -> wibble.Wibble {
  │                ^^^^^^^^^^^^^

`wibble` does define `Wibble`, but it is private and cannot be accessed by
other modules.
