compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__use_of_private_value_in_the_same_package.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport wibble\n\npub fn go() {\n  wibble.wobble\n}\n"
---
----- SOURCE CODE
-- wibble.gleam
const wobble = 0

-- main.gleam

import wibble

pub fn go() {
  wibble.wobble
}


----- ERROR
error: Use of private value
  ┌─ /src/one/two.gleam:5:10
  │
5 │   wibble.wobble
  │          ^^^^^^

`wibble` does define `wobble`, but it is private and cannot be accessed by
other modules.
